--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,7 +23,7 @@ jobs:
             - uses: actions/checkout@v1
             - name: Restore cached deps
               id: cache-restore-deps
-              uses: actions/cache/restore@v4
+              uses: actions/cache/restore@v3
               with:
                 path: |
                   dep-cache/
@@ -36,11 +36,11 @@ jobs:
               run: ci/build_linux.sh
             - name: Cache deps
               id: cache-save-deps
-              uses: actions/cache/save@v4
+              uses: actions/cache/save@v3
               with:
                 path: dep-cache
                 key: ${{ matrix.build_type }}-${{ github.sha }}-dep-cache
-              if: github.ref_name == github.event.repository.default_branch
+              if: github.ref_name == github.event.repository.default_branch && matrix.cloud_provider == 'AWS'
             - uses: actions/setup-python@v1
               with:
                 python-version: '3.7'
