--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,8 +25,7 @@ jobs:
               id: cache-restore-deps
               uses: actions/cache/restore@v3
               with:
-                path: |
-                  dep-cache/
+                path: dep-cache
                 key: ${{ matrix.build_type }}-${{ github.event.pull_request.base.sha }}-dep-cache
               if: github.event_name == 'pull_request'
             - name: Build
