--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,7 +26,7 @@ jobs:
               uses: actions/cache/restore@v3
               with:
                 path: dep-cache
-                key: ${{ matrix.build_type }}-${{ github.event.pull_request.base.sha }}-dep-cache
+                key: ${{ matrix.build_type }}-${{ github.event.pull_request.base.sha }}-Linux-dep-cache
               if: github.event_name == 'pull_request'
             - name: Build
               shell: bash
@@ -38,7 +38,7 @@ jobs:
               uses: actions/cache/save@v3
               with:
                 path: dep-cache
-                key: ${{ matrix.build_type }}-${{ github.sha }}-dep-cache
+                key: ${{ matrix.build_type }}-${{ github.sha }}-Linux-dep-cache
               if: github.ref_name == github.event.repository.default_branch && matrix.cloud_provider == 'AWS'
             - uses: actions/setup-python@v1
               with:
@@ -57,6 +57,13 @@ jobs:
                 cloud_provider: [ 'AWS', 'AZURE', 'GCP' ]
         steps:
             - uses: actions/checkout@v1
+            - name: Restore cached deps
+              id: cache-restore-deps
+              uses: actions/cache/restore@v3
+              with:
+                path: dep-cache
+                key: ${{ matrix.build_type }}-${{ matrix.platform }}-${{ matrix.vs_version }}-${{ github.event.pull_request.base.sha }}-Win-dep-cache
+              if: github.event_name == 'pull_request'
             - name: Build
               shell: cmd
               env:
@@ -64,6 +71,13 @@ jobs:
                   BUILD_TYPE: ${{ matrix.build_type }}
                   VS_VERSION: ${{ matrix.vs_version }}
               run: ci\build_win.bat
+            - name: Cache deps
+              id: cache-save-deps
+              uses: actions/cache/save@v3
+              with:
+                path: dep-cache
+                key: ${{ matrix.build_type }}-${{ matrix.platform }}-${{ matrix.vs_version }}-${{ github.sha }}-Win-dep-cache
+              if: github.ref_name == github.event.repository.default_branch && matrix.cloud_provider == 'AWS'
             - uses: actions/setup-python@v1
               with:
                 python-version: '3.7'
@@ -89,6 +103,13 @@ jobs:
                 cloud_provider: [ 'AWS', 'AZURE', 'GCP' ]
         steps:
             - uses: actions/checkout@v1
+            - name: Restore cached deps
+              id: cache-restore-deps
+              uses: actions/cache/restore@v3
+              with:
+                path: dep-cache
+                key: ${{ matrix.build_type }}-${{ matrix.platform }}-${{ matrix.vs_version }}-${{ github.event.pull_request.base.sha }}-Win-dep-cache
+              if: github.event_name == 'pull_request'
             - name: Build
               shell: cmd
               env:
@@ -96,6 +117,13 @@ jobs:
                   BUILD_TYPE: ${{ matrix.build_type }}
                   VS_VERSION: ${{ matrix.vs_version }}
               run: ci\build_win.bat
+            - name: Cache deps
+              id: cache-save-deps
+              uses: actions/cache/save@v3
+              with:
+                path: dep-cache
+                key: ${{ matrix.build_type }}-${{ matrix.platform }}-${{ matrix.vs_version }}-${{ github.sha }}-Win-dep-cache
+              if: github.ref_name == github.event.repository.default_branch && matrix.cloud_provider == 'AWS'
             - uses: actions/setup-python@v1
               with:
                 python-version: '3.7'
@@ -122,11 +150,25 @@ jobs:
             - name: Install Homebrew Bash
               shell: bash
               run: brew install bash
+            - name: Restore cached deps
+              id: cache-restore-deps
+              uses: actions/cache/restore@v3
+              with:
+                path: dep-cache
+                key: ${{ matrix.build_type }}-${{ github.event.pull_request.base.sha }}-Mac-dep-cache
+              if: github.event_name == 'pull_request'
             - name: Build
               shell: bash
               env:
                 BUILD_TYPE: ${{ matrix.build_type }}
               run: ./ci/build_mac.sh
+            - name: Cache deps
+              id: cache-save-deps
+              uses: actions/cache/save@v3
+              with:
+                path: dep-cache
+                key: ${{ matrix.build_type }}-${{ github.sha }}-Mac-dep-cache
+              if: github.ref_name == github.event.repository.default_branch && matrix.cloud_provider == 'AWS'
             - name: Test
               shell: bash
               env:
